# tagging

./: .gitignore  .gitmodules  Makefile  README.md  backup-shell-common.nix  build.sh  contributors.txt  createdatabase.sh  deploy.sh  init-sandbox.sh  notes.txt  shell-common.nix  tagging.org  users.txt
app/: devel.cfg.example  rebuild-server.sh
app/snaplets/heist/templates/: _adminpanel.tpl  _index.tpl  _login.tpl  _taggingclient.tpl  _taggingusers_table.tpl  _turklink.tpl  base.tpl  stimulus.tpl  taggingusers_table.tpl  userform.tpl
app/static/media/css/: homealone.css  videomemory.css
homealone/: default.nix  ghc.nix  homealone.cabal  tr.nix
homealone/src/: Admin.hs  HomeAlone.hs  Types.hs  Widgets.hs
server/: server.cabal
sql/: create.sql  setup.sh
tagging-client/: default.nix  tagging-client.cabal  tr.nix
tagging-client/exec/: AdminPanel.hs  HomeAlone.hs  SimplePics.hs
tagging-client/src/: Crud.hs  GroundhogUtils.hs
tagging-client/src/Tagging/: Crud.hs  MediaElement.hs
tagging-client/src/Tagging/Experiments/HomeAlone/: Widgets.hs
tagging-client/src/Tagging/Experiments/SimplePics/: .Widgets.hs.swp  Widgets.hs
tagging-common/: default.nix  shell.nix  tagging-common.cabal
tagging-common/exec/: DirectoryToStimSet.hs  Fixtures.hs
tagging-common/src/: .Utils.hs.swp  Utils.hs
tagging-common/src/Experiments/: HomeAlonePersonAndDirection.hs  SimplePics.hs
tagging-common/src/Tagging/: API.hs  Database.hs  Response.hs  Serialize.hs  Stimulus.hs  User.hs
tagging-server/: .ghci  ChangeLog.md  backup-shell-nix2  backup.shell.nix  default.nix  migrate.sql  migrate2.sql  server.cabal  shell.nix  tagging-server.cabal  tr.nix  tr2.nix
tagging-server/exec/: DirectoryToStimSet.hs  Fixtures.hs  MakeClients.hs  Server.hs
tagging-server/scratch/: assignment_migrate.sql  assignment_migrate_2.sql  default.nix  shortenClips.ipynb  videomemoryAnswers.hs
tagging-server/snaplets/heist/templates/: .base.tpl.swp  _adminpanel.tpl  _index.tpl  _login.tpl  _new_user.tpl  _taggingclient.tpl  base.tpl  index.tpl  login.tpl  new_user.tpl  stimulus.tpl  userform.tpl
tagging-server/src/: API.hs  APIDocs.hs  Application.hs  Experimenter.hs  Main.hs  Resources.hs  Site.hs  Utils.hs
tagging-server/src/Experiments/: SimplePics.hs
tagging-server/src/Server/: Application.hs  Crud.hs  Database.hs  Experimenter.hs  GroundhogAuth.hs  Researcher.hs  Resources.hs  Session.hs  Site.hs  Subject.hs  User.hs  Utils.hs
tagging-server/src/Server/Experiments/: HomeAlone.hs  SimplePics.hs
tagging-server/src/Snap/Snaplet/Groundhog/: Postgresql.hs
tagging-server/static/: favicon.ico?v=2  index.html
tagging-server/static/media/css/: HomeAlone.css  drawcopy.css  videomemory.css
videogeneral/: default.nix  tr.nix  videogeneral.cabal
videogeneral/src/: Main.hs
videogeneral/src/MovieCharacters/: MetaData.hs  Widgets.hs
videomemory/: default.nix  toSite.sh  tr.nix  videomemory.cabal
videomemory/src/: Main.hs  MediaElement.hs
