name:                homealone
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable homealone
  main-is: HomeAlone.hs
  other-modules: Widgets
                 Types
  build-depends:       base >=4.8 && <4.9, 
                       aeson, 
                       bytestring, 
                       containers, 
                       data-default,
                       errors,
                       ghcjs-dom, 
                       lens,
                       reflex, 
                       reflex-dom, 
                       reflex-dom-contrib,
                       tagging-common, 
                       text, 
                       time,
                       transformers,
                       unordered-containers,
                       uuid-types,
                       vector
  hs-source-dirs: src
  default-language: Haskell2010
