name:                videogeneral
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: MovieCharacters.MetaData
                   MovieCharacters.Widgets
  build-depends:       base >=4.8 && <4.9, 
                       aeson, 
                       bytestring, 
                       containers, 
                       data-default,
                       ghcjs-dom, 
                       lens,
                       reflex, 
                       reflex-dom, 
                       reflex-dom-contrib,
                       tagging-common, 
                       tagging-client,
                       text, 
                       transformers,
                       unordered-containers,
                       vector
  hs-source-dirs: src
  default-language: Haskell2010


executable videogeneral
  main-is:             Main.hs
  other-extensions:    ScopedTypeVariables
  build-depends:       base >=4.8 && <4.9, 
                       aeson, 
                       bytestring, 
                       containers, 
                       data-default,
                       ghcjs-dom, 
                       lens,
                       reflex, 
                       reflex-dom, 
                       reflex-dom-contrib,
                       tagging-common, 
                       tagging-client,
                       text, 
                       transformers,
                       unordered-containers,
                       vector,
                       videogeneral
  hs-source-dirs:      src
  default-language:    Haskell2010
